# webapi/src/main/kotlin/com/office/webapi/resultmodels/ResultBase.kt
@@ -7,7 +7,7 @@ import io.ktor.http.HttpStatusCode
  */
 data class ResultBase (
     val success: Boolean = true,  // 是否成功
-    val error: HttpStatusCode = HttpStatusCode.OK,  // 错误代码
+    val error: Int = HttpStatusCode.OK.value,  // 错误代码
     val errorMsg: String = "",  // 错误信息
     var data: Any? = null  // 数据
 )
